iter_language/tests/corpus/invalid/queue-sqs-fifo-only-fields-on-standard-queue.iter.err.snap
---
source: iter_language/tests/conformance.rs
description: queue-sqs-fifo-only-fields-on-standard-queue.iter
---
Error: queue sqs: producer field(s) `message_group_id`, `message_deduplication_id` require a FIFO queue
   ╭─[queue-sqs-fifo-only-fields-on-standard-queue.iter:1:7]
   │
 1 │ queue sqs {
   │       ─┬─  
   │        ╰─── queue sqs: producer field(s) `message_group_id`, `message_deduplication_id` require a FIFO queue
   │ 
   │ Help: use a `.fifo` queue URL/name or set `fifo = true`; otherwise drop these fields
───╯

Warning: flat Iterfile syntax is deprecated — use named definitions and runner binding
   ╭─[queue-sqs-fifo-only-fields-on-standard-queue.iter:1:1]
   │
 1 │ queue sqs {
   │ │ 
   │ ╰─ flat Iterfile syntax is deprecated — use named definitions and runner binding
───╯
